# 1010-solver

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/repr/: grid.rs  mod.rs  pieces.rs
