[package]
name = "solver-1010"
version = "0.1.0"
authors = ["gruvw <gruvw.dev@gmail.com>"]
description = "Solver for the 1010! game 🦀."
repository = "https://github.com/gruvw/solver-1010"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
phf = { version = "0.11.1", features = ["macros"] }
rayon = "1.6.1"
